Issue #13012: fix loading with non-ascii symbols in path