@@ -20,7 +20,6 @@
 package com.puppycrawl.tools.checkstyle.checks.imports;
 
 import java.net.URI;
-import java.util.Collections;
 import java.util.Set;
 import java.util.regex.Pattern;
 
@@ -253,7 +252,7 @@ public class ImportControlCheck extends AbstractCheck implements ExternalResourc
 
     @Override
     public Set<String> getExternalResourceLocations() {
-        return Collections.singleton(file.toString());
+        return Set.of(file.toASCIIString());
     }
 
     /**
